// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OE - Inpage navigation default renders correctly 1`] = `
<jest>
  <nav
    class="bcl-inpage-navigation position-sticky"
    id="bcl-inpage-navigation"
  >
    <button
      type="button"
    />
    <h2
      class="mb-4 bcl-heading"
    >
      Page content
    </h2>
    <div
      class="dropdown-menu"
    >
      <ul
        class="nav nav-pills flex-column"
      >
        <li
          class="nav-item"
        />
        <li
          class="nav-item"
        />
        <li
          class="nav-item"
        />
        <li
          class="nav-item"
        />
      </ul>
    </div>
  </nav>
</jest>
`;

exports[`OE - Inpage navigation renders correctly with title and link 1`] = `
<jest>
  <nav
    class="bcl-inpage-navigation position-sticky"
    id="bcl-inpage-navigation"
  >
    <button
      type="button"
    />
    <h6
      class="mb-4 bcl-heading"
    />
    <div
      class="dropdown-menu"
    >
      <ul
        class="nav nav-pills flex-column"
      >
        <li
          class="nav-item"
        />
        <li
          class="nav-item"
        />
        <li
          class="nav-item"
        />
        <li
          class="nav-item"
        />
      </ul>
    </div>
  </nav>
</jest>
`;
